--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ legend {
 
 fieldset {
 	margin: 10px;
-	border-color: #F7A300;
+	border-color: #195eab;
 }
 
 td {
@@ -99,7 +99,7 @@ ul.ui-autocomplete {
 	left: 13px;
 	width: 245px;
 	height: 170px;
-	border: 2px solid #F7A300;
+	border: 2px solid #195eab;
 }
 
 #about_text {
@@ -139,7 +139,7 @@ ul.ui-autocomplete {
 }
 
 #about_ok_button {
-	background-color: #F7A300;
+	background-color: #195eab;
 	color: white;
 	border: 0;
 	width: 100px;
@@ -162,7 +162,7 @@ ul.ui-autocomplete {
 	left: 13px;
 	width: 250px;
 	height: 185px;
-	border: 2px solid #F7A300;
+	border: 2px solid #195eab;
 }
 
 #services {
@@ -202,7 +202,7 @@ ul.ui-autocomplete {
 }
 
 #signin {
-	background-color: #F7A300;
+	background-color: #195eab;
 	color: white;
 	border: 0;
 	width: 150px;
@@ -258,7 +258,7 @@ ul.ui-autocomplete {
 
 #tabs {
 	height: 90%;
-	border-color: #F7A300;
+	border-color: #195eab;
 }
 
 #tabs li {
@@ -363,7 +363,7 @@ ul.ui-autocomplete {
 
 #restartmessage {
 	font-size: 12px;
-	color: #359C0C;
+	color: #195eab;
 	position: absolute;
 	top: 85px;
 	left: 13px;
